--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -2998,32 +2998,29 @@ import pyretechnics.surface_fire as sf
 fuel_model       = fm.fuel_model_table[101] # GR1
 canopy_height    = 20                       # meters
 canopy_cover     = 0.6                      # 0-1
-wind_speed_10m_x = 100.0                    # m/min
-wind_speed_10m_y = 100.0                    # m/min
-
-# Convert from cartesian (x,y) to azimuthal (r,azimuth) coordinates
-(wind_speed_10m, upwind_direction) = conv.cartesian_to_azimuthal(wind_speed_10m_x, wind_speed_10m_y) # (m/min, deg)
+wind_speed_10m   = 20                       # km/hr
+upwind_direction = 45.0                     # degrees clockwise from North
 
 # Convert from 10m wind speed to 20ft wind speed
-wind_speed_20ft = conv.wind_speed_10m_to_wind_speed_20ft(wind_speed_10m) # m/min
+wind_speed_20ft = conv.wind_speed_10m_to_wind_speed_20ft(wind_speed_10m) # km/hr
 
 # Convert from 20ft wind speed to midflame wind speed in m/min
-midflame_wind_speed = sf.calc_midflame_wind_speed(wind_speed_20ft,             # m/min
-                                                  fuel_model["delta"],         # ft
-                                                  conv.m_to_ft(canopy_height), # ft
-                                                  canopy_cover)                # 0-1
+midflame_wind_speed = sf.calc_midflame_wind_speed(conv.km_hr_to_m_min(wind_speed_20ft), # m/min
+                                                  fuel_model["delta"],                  # ft
+                                                  conv.m_to_ft(canopy_height),          # ft
+                                                  canopy_cover)                         # 0-1
 
 # View results
-print("Midflame Wind Speed and Direction for 10m Wind Speed = (100 m/min, 100 m/min)\n"
+print("Midflame Wind Speed and Direction for 10m Wind Speed = 20 km/hr, Upwind Direction = 45.0\n"
       + " with Fuel Model GR1, Canopy Height = 20m, and Canopy Cover = 60%\n"
       + "- Speed: " + str(midflame_wind_speed) + " (m/min)\n"
       + "- Downwind Direction: " + str(conv.opposite_direction(upwind_direction)) + " (degrees clockwise from North)")
 #+end_src
 
 #+RESULTS: translate-10m-wind-to-midflame-wind
-: Midflame Wind Speed and Direction for 10m Wind Speed = (100 m/min, 100 m/min)
+: Midflame Wind Speed and Direction for 10m Wind Speed = 20 km/hr, Upwind Direction = 45.0
 :  with Fuel Model GR1, Canopy Height = 20m, and Canopy Cover = 60%
-: - Speed: 11.55028634159726 (m/min)
+: - Speed: 27.224285989299275 (m/min)
 : - Downwind Direction: 225.0 (degrees clockwise from North)
 
 *** How to Calculate the Surface Fire Behavior in the Direction of Maximum Spread
@@ -3458,7 +3455,6 @@ from math import sqrt
 import pyretechnics.conversion as conv
 
 
-# FIXME: Surface L/W uses 0.25 but Crown L/W uses 0.125. Check Rothermel 1991.
 def crown_length_to_width_ratio(wind_speed_10m, max_length_to_width_ratio=None):
     """
     Calculate the length_to_width_ratio of the crown fire front using eq. 9 from
@@ -5558,7 +5554,7 @@ The ~grow_fire~ function takes a single =world_state= dictionary as input with t
   |--------------------------------------------+---------+--------------------------------------------------------+-----------+-------|
   | elevation                                  | float32 | meters above sea level [0-8850]                        |           |     2 |
   | slope                                      | float32 | meters rise / meters run [0-4]                         |           |     2 |
-  | aspect                                     | int16   | degrees clockwise from North [0-359)                   |           |     2 |
+  | aspect                                     | int16   | degrees clockwise from North [0-360)                   |           |     2 |
   | fuel_model                                 | int16   | integer classes [1-204]                                |           |     2 |
   | canopy_cover                               | float32 | canopy area / total area [0-0.95]                      |           |     2 |
   | canopy_height                              | float32 | meters  [0-51]                                         |           |     2 |
@@ -5571,8 +5567,8 @@ The ~grow_fire~ function takes a single =world_state= dictionary as input with t
   | crown_spotting_percent   (TODO: min, max?) | float   | percent [0-1]                                          | Yes       |     2 |
   | temperature                                | float   | degrees Celsius                                        | Yes       |     3 |
   | relative_humidity                          | float   | percent [0-1+]                                         | Yes       |     3 |
-  | wind_speed_10m_x                           | float   | meters/minute                                          |           |     3 |
-  | wind_speed_10m_y                           | float   | meters/minute                                          |           |     3 |
+  | wind_speed_10m                             | float   | km/hr                                                  |           |     3 |
+  | upwind_direction                           | int16   | degrees clockwise from North [0-360)                   |           |     3 |
   | fuel_moisture_dead_1hr                     | float   | ratio [0-1+] grams moisture/grams ovendry weight       |           |     3 |
   | fuel_moisture_dead_10hr                    | float   | ratio [0-1+] grams moisture/grams ovendry weight       |           |     3 |
   | fuel_moisture_dead_100hr                   | float   | ratio [0-1+] grams moisture/grams ovendry weight       |           |     3 |
@@ -5669,8 +5665,8 @@ world_state = {
         # 3D Arrays (e.g. 1hr x 300m x 300m resolution, 1day x 30km x 30km extent)
         "temperature"                  : lambda z,y,x: 10.0,
         "relative_humidity"            : lambda z,y,x: 10.0,
-        "wind_speed_10m_x"             : lambda z,y,x: 0.0,
-        "wind_speed_10m_y"             : lambda z,y,x: 0.0,
+        "wind_speed_10m"               : lambda z,y,x: 0.0,
+        "upwind_direction"             : lambda z,y,x: 0.0,
         "fuel_moisture_dead_1hr"       : lambda z,y,x: 10.0,
         "fuel_moisture_dead_10hr"      : lambda z,y,x: 10.0,
         "fuel_moisture_dead_100hr"     : lambda z,y,x: 10.0,
@@ -5910,11 +5906,11 @@ The following table contains the current mapping from ELMFIRE parameters to Pyre
 | CBH_FILENAME                             | input_layer_dict                      | canopy_base_height                      |
 | CBD_FILENAME                             | input_layer_dict                      | canopy_bulk_density                     |
 | ADJ_FILENAME                             | input_layer_dict                      | fuel_spread_adjustment                  |
-| CRITICAL_SPOTTING_FIRELINE_INTENSITY(:)  | input_layer_dict                      | surface_spotting_fireline_intensity    |
+| CRITICAL_SPOTTING_FIRELINE_INTENSITY(:)  | input_layer_dict                      | surface_spotting_fireline_intensity     |
 | GLOBAL_SURFACE_FIRE_SPOTTING_PERCENT_MAX | input_layer_dict                      | surface_spotting_percent                |
 | GLOBAL_SURFACE_FIRE_SPOTTING_PERCENT_MIN | input_layer_dict                      | surface_spotting_percent                |
-| WS_FILENAME                              | input_layer_dict                      | wind_speed_10m_x, wind_speed_10m_y      |
-| WD_FILENAME                              | input_layer_dict                      | wind_speed_10m_x, wind_speed_10m_y      |
+| WS_FILENAME                              | input_layer_dict                      | wind_speed_10m                          |
+| WD_FILENAME                              | input_layer_dict                      | upwind_direction                        |
 | M1_FILENAME                              | input_layer_dict                      | fuel_moisture_dead_1hr                  |
 | M10_FILENAME                             | input_layer_dict                      | fuel_moisture_dead_10hr                 |
 | M100_FILENAME                            | input_layer_dict                      | fuel_moisture_dead_100hr                |
@@ -6308,8 +6304,8 @@ suppression_difficulty_index_layer = np.arange(0,1000000).reshape(1000,1000) # O
 # 3D Arrays (e.g. 1hr x 300m x 300m resolution, 1day x 30km x 30km extent)
 temperature_layer                   = np.arange(240000).reshape(24,100,100)
 relative_humidity_layer             = np.arange(240000).reshape(24,100,100)
-wind_speed_10m_x_layer              = np.arange(240000).reshape(24,100,100)
-wind_speed_10m_y_layer              = np.arange(240000).reshape(24,100,100)
+wind_speed_10m_layer                = np.arange(240000).reshape(24,100,100)
+upwind_direction_layer              = np.arange(240000).reshape(24,100,100)
 fuel_moisture_dead_1hr_layer        = np.arange(240000).reshape(24,100,100)
 fuel_moisture_dead_10hr_layer       = np.arange(240000).reshape(24,100,100)
 fuel_moisture_dead_100hr_layer      = np.arange(240000).reshape(24,100,100)
@@ -6349,8 +6345,8 @@ def test_make_layer_lookup():
         # 3D Arrays (e.g. 1hr x 300m x 300m resolution, 1day x 30km x 30km extent)
         "temperature"                  : SpaceTimeCube(cube_shape, temperature_layer),
         "relative_humidity"            : SpaceTimeCube(cube_shape, relative_humidity_layer),
-        "wind_speed_10m_x"             : SpaceTimeCube(cube_shape, wind_speed_10m_x_layer),
-        "wind_speed_10m_y"             : SpaceTimeCube(cube_shape, wind_speed_10m_y_layer),
+        "wind_speed_10m"               : SpaceTimeCube(cube_shape, wind_speed_10m_layer),
+        "upwind_direction"             : SpaceTimeCube(cube_shape, upwind_direction_layer),
         "fuel_moisture_dead_1hr"       : SpaceTimeCube(cube_shape, fuel_moisture_dead_1hr_layer),
         "fuel_moisture_dead_10hr"      : SpaceTimeCube(cube_shape, fuel_moisture_dead_10hr_layer),
         "fuel_moisture_dead_100hr"     : SpaceTimeCube(cube_shape, fuel_moisture_dead_100hr_layer),
@@ -6394,8 +6390,8 @@ def test_use_layer_lookup_3d():
     layer_lookup     = test_make_layer_lookup()
     temp_12_100_100  = layer_lookup["temperature"].get(12,100,100)
     rh_12_100_100    = layer_lookup["relative_humidity"].get(12,100,100)
-    wspx_12_100_100  = layer_lookup["wind_speed_10m_x"].get(12,100,100)
-    wspy_12_100_100  = layer_lookup["wind_speed_10m_y"].get(12,100,100)
+    wsp_12_100_100   = layer_lookup["wind_speed_10m"].get(12,100,100)
+    wdir_12_100_100  = layer_lookup["upwind_direction"].get(12,100,100)
     md1_12_100_100   = layer_lookup["fuel_moisture_dead_1hr"].get(12,100,100)
     md10_12_100_100  = layer_lookup["fuel_moisture_dead_10hr"].get(12,100,100)
     md100_12_100_100 = layer_lookup["fuel_moisture_dead_100hr"].get(12,100,100)
